     - Added the `checkout` command. Pass it the name of a VCS branch, and it
       will compare the plans between that branch and the current branch,
       revert to the last common change, check out the branch, and then
       redeploy. This makes it easy to switch between working branches that
       have different sets of commits. Git-only for now. Idea and code by
       Ronan Dunklau.

0.953  2013-02-21T23:37:57Z
     - Fixed test failure in `t/engine.t` triggered by a clock tick.
     - Changed the verify template to end with `ROLLBACK` rather than
       `COMMIT`. This it to encourage folks to make no lasting changes in
       verify tests.
     - Fixed exception triggered on an attempt to revert or rebase `--to` a
       change that does not exist in the database.
     - Added recommendation for Pod::Simple to the build process.
     - Added the `--etcdir` build option to specify the directory in which
       configuration and template files should be installed. Defaults to the
       `etc/sqitch` subdirectory of the `--prefix`, `--install_base`, or
       Perl's prefix.
     - Added the `--installed_etcdir` build option. This is used to set
       the location of the system etc directory. Defaults to the value of
       `--etcdir`.
     - When building with `--prefix` or `--install_base`, and without
       `--etcdir`, the configuration files and tmeplates are now installed
       into `etc/sqitch` in that directory, rather than just `etc`. This is to
       enable packaging systems to move the directory to the proper location.

0.952  2013-01-12T00:02:54Z
     - Switched from Moose to Mouse whever possible. Speeds load and runtime
       20-30%. Thanks to Michael Schwern for the pull request!

0.951  2013-01-08T00:21:58Z
     - Fixed double "@" displayed for tags in the output of `revert`.
     - Fixed reversion of reworked changes to run the original revert script,
       rather than the reworked script.